add second project

--- a/index.html
+++ b/index.html
@@ -86,14 +86,23 @@
 								</article>
 								<article>
 									<header>
-										<span class="date">April 14, 2017</span>
-										<h2><a href="#">Tempus sed<br />
-										nulla imperdiet</a></h2>
+										<span class="date">January 6, 2025</span>
+										<h2><a href="#"> Cleaning-Data-of-layoff
+											<br />
+
+												this project aims to analyze layoff dataset
+											</a>
+										</h2>
 									</header>
-									<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
-									<p>Donec eget ex magna. Interdum et malesuada fames ac ante ipsum primis in faucibus. Pellentesque venenatis dolor imperdiet dolor mattis sagittis magna etiam.</p>
+									<a href="#" class="image fit"><img src="images/layoff.jfif" alt="" /></a>
+										<p>A layoff dataset is a structured collection
+										 of data records about company employee layoffs. 
+										 It contains data attributes
+										 such as company name, number of jobs or positions, 
+										 layoff type, reason, and location.
+										</p>
 									<ul class="actions special">
-										<li><a href="https://github.com/githubmohammad1/Bike-sales" class="button">Full project in github</a></li>
+										<li><a href="https://github.com/githubmohammad1/Cleaning-Data-of-layoff-data" class="button">Full project in github</a></li>
 									</ul>
 								</article>
 						
@@ -108,9 +117,9 @@
 									<a href="#" class="page">2</a>
 									<a href="#" class="page">3</a>
 									<span class="extra">&hellip;</span>
-									<a href="#" class="page">8</a>
+									<!-- <a href="#" class="page">8</a>
 									<a href="#" class="page">9</a>
-									<a href="#" class="page">10</a>
+									<a href="#" class="page">10</a> -->
 									<a href="#" class="next">Next</a>
 								</div>
 							</footer>
